<resources>
    <string name="app_name">MyDicodingEvents</string>
    <string name="name">Name</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="search">Search</string>
    <string name="time_begin">Dimulai Pada</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="finished_event">Finished Event</string>
    <string name="owner_name">Owner Name</string>
    <string name="register">Register</string>
    <string name="quota">Sisa Quota : %1$d</string>
    <string name="image">Image</string>
    <string name="description">%1$s</string>
    <string name="title_home">Home</string>
    <string name="settings">Settings</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="dark_mode">Dark Mode </string>
    <string name="favoritefab">Favoritefab</string>
    <string name="notif">Notifications</string>
    <string name="favorite">Favorite</string>
</resources>